ruotuvaki overflow has been fixed

--- a/work/ruotuvaki/sources/ruotuvaki.css
+++ b/work/ruotuvaki/sources/ruotuvaki.css
@@ -1,4 +1,9 @@
 /* CONTENT */
+body{
+    max-width: 100vw;
+    overflow: hidden;
+}
+
 .work-div:nth-child(2) img{
     aspect-ratio: 1024 / 1448;
 }
